v1.1.0 - Brigadier, etc.